--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "rootDir": "./src",
+    "target": "ES5",
+    "module": "AMD",
+    "outFile": "./dist/out.js",
     "lib": [
       "es2015",
       "dom"
@@ -12,3 +15,4 @@
     "types": []
   }
 }
+
