--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic2-auto-complete",
+  "name": "ionic2-autocomplete",
   "version": "1.5.0-release",
   "scripts": {
     "test": "echo no tests",
