--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo no tests",
     "start": "echo program started",
-    "prepare": "echo preparing && tsc && echo prepared"
+    "install": "echo preparing && tsc && echo prepared"
   },
   "repository": {
     "type": "git",
